--- a/.github/workflows/autoapi.yml
+++ b/.github/workflows/autoapi.yml
@@ -10,7 +10,7 @@ on:
   #  branches: 
   #    - master
   schedule:
-    - cron: 0 */2 * * *
+    - cron: 0 12/4 * * *
   watch:
     types: [started]
    
